<resources>
    <string name="app_name">MDAnalysis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MD Analysis</string>
    <string name="nav_header_subtitle">modakdevanalysis@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">MD Analysis</string>
    <string name="menu_new_product">New Product</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ip">10.0.0.47</string>
    <string name="port">8081</string>
    <string name="domain_name">product-catalog-module</string>
    <string name="catalog_name">product</string>
    <string name="get_all_products">get-all-products</string>
    <string name="url_product">http://192.168.125.189:8765/product-catalog-module/product/</string>
    <string name="url_corr_mat">http://192.168.127.189:7654/api/</string>
    <string name="product_card_title">description</string>
    <string name="tab_text_1">Analysis</string>
    <string name="tab_text_2">code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="accuracy_title">Accuracy</string>
    <string name="card_description_title">Description</string>
    <string name="card_train_model_file">Train model</string>
    <string name="card_test_model_file">Test File</string>
    <string name="card_model_type">Model Type</string>
    <string name="product_list_title">Products List</string>
    <string name="auth_token">Basic YWRtaW46YWRtaW4=</string>
    <string name="summary_card_project_title">Project Name</string>
    <string name="summary_card_number_of_products_title">Number of Models</string>
    <string name="summary_card_project_des_title">Project Description</string>
    <string name="summary_card_project_owners_title">Project Owners</string>
    <string name="summary_card_fake_project_desc">The PredictIQ project focuses on developing a comprehensive machine learning solution for customer segmentation in the retail industry. The goal is to create accurate customer profiles based on purchasing behavior, demographics, and online engagement, enabling targeted marketing strategies and improving customer retention. The project leverages advanced machine learning models to analyze vast datasets, predict customer preferences, and recommend personalized experiences. PredictIQ aims to help retailers optimize their marketing campaigns and increase conversion rates by understanding customers at a deeper level.</string>
    <string name="summary_card_fake_project_name">PredictIQ: Intelligent Customer Segmentation</string>
    <string name="summary_card_fake_num_of_models">5</string>
    <string name="summary_card_fake_names">Jone Doe, Jane Doe</string>
    <string name="sample_title">Title</string>
    <string name="refresh_page">Refresh</string>
    <string name="sample_value">Value</string>
    <string name="sample_text">                  Gender       Age      Debt   Married  BankCustomer  Industry  Ethnicity  YearsEmployed  PriorDefault  Employed  CreditScore  DriversLicense   Citizen   ZipCode    Income  Approved\nGender          1.000000  0.109062 -0.133817 -0.121383     -0.121383  0.076470   0.035674       0.224129     -0.202289 -0.102941     0.070410       -0.030969  0.140028  0.179365  0.102800       NaN\nAge             0.109062  1.000000  0.326326 -0.244710     -0.244710  0.226631   0.319858       0.566442      0.035575  0.180912     0.379085        0.167989 -0.235672 -0.337367  0.034277       NaN\nDebt           -0.133817  0.326326  1.000000 -0.024435     -0.024435  0.336969   0.062740       0.664975      0.209607  0.374802     0.592123        0.028013 -0.108092 -0.488754 -0.152098       NaN\nMarried        -0.121383 -0.244710 -0.024435  1.000000      1.000000  0.117138   0.136558      -0.157763     -0.108893  0.010555    -0.334239        0.029637  0.075378 -0.150984  0.061596       NaN\nBankCustomer   -0.121383 -0.244710 -0.024435  1.000000      1.000000  0.117138   0.136558      -0.157763     -0.108893  0.010555    -0.334239        0.029637  0.075378 -0.150984  0.061596       NaN\nIndustry        0.076470  0.226631  0.336969  0.117138      0.117138  1.000000   0.507953       0.313218     -0.171197 -0.026174     0.091672       -0.013450 -0.095293 -0.351858 -0.075767       NaN\nEthnicity       0.035674  0.319858  0.062740  0.136558      0.136558  0.507953   1.000000       0.264130     -0.061340  0.095130     0.114244       -0.011130 -0.169842 -0.122966  0.054815       NaN\nYearsEmployed   0.224129  0.566442  0.664975 -0.157763     -0.157763  0.313218   0.264130       1.000000      0.154551  0.238263     0.658805        0.037536 -0.115261 -0.335361  0.080172       NaN\nPriorDefault   -0.202289  0.035575  0.209607 -0.108893     -0.108893 -0.171197  -0.061340       0.154551      1.000000  0.429863     0.232544        0.171583  0.060193  0.072642  0.043531       NaN\nEmployed       -0.102941  0.180912  0.374802  0.010555      0.010555 -0.026174   0.095130       0.238263      0.429863  1.000000     0.540972        0.141081 -0.297560  0.038859 -0.191644       NaN\nCreditScore     0.070410  0.379085  0.592123 -0.334239     -0.334239  0.091672   0.114244       0.658805      0.232544  0.540972     1.000000        0.118860 -0.160971 -0.049050 -0.086116       NaN\nDriversLicense -0.030969  0.167989  0.028013  0.029637      0.029637 -0.013450  -0.011130       0.037536      0.171583  0.141081     0.118860        1.000000 -0.221163  0.050183  0.178831       NaN\nCitizen         0.140028 -0.235672 -0.108092  0.075378      0.075378 -0.095293  -0.169842      -0.115261      0.060193 -0.297560    -0.160971       -0.221163  1.000000  0.081902 -0.060054       NaN\nZipCode         0.179365 -0.337367 -0.488754 -0.150984     -0.150984 -0.351858  -0.122966      -0.335361      0.072642  0.038859    -0.049050        0.050183  0.081902  1.000000  0.066482       NaN\nIncome          0.102800  0.034277 -0.152098  0.061596      0.061596 -0.075767   0.054815       0.080172      0.043531 -0.191644    -0.086116        0.178831 -0.060054  0.066482  1.000000       NaN\nApproved             NaN       NaN       NaN       NaN           NaN       NaN        NaN            NaN           NaN       NaN          NaN             NaN       NaN       NaN       NaN       NaN</string>


</resources>